# pluribus

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO.txt  fly.toml
.github/workflows/: deploy.yaml
crates/pluribus-frequency/: Cargo.toml
crates/pluribus-frequency/src/: lib.rs  network.rs  protocol.rs  state.rs  sync.rs
crates/pluribus-frequency/src/network/: tailscale.rs
crates/pluribus-llm/: Cargo.toml
crates/pluribus-llm/src/: deepseek.rs  lib.rs  openai_compat.rs
crates/pluribus-unum/: Cargo.toml
crates/pluribus-unum/src/: chat.rs  geocoding.rs  index.rs  llm.rs  main.rs  telegram.rs  tools.rs
crates/pluribus-unum/src/chat/: noop.rs  telegram.rs  terminal.rs
crates/pluribus-unum/src/geocoding/: mapsco.rs
crates/pluribus-unum/src/llm/: deepseek.rs  openai_compat.rs  openrouter.rs
crates/pluribus-unum/src/telegram/: markdown.rs
crates/pluribus-unum/src/tools/: browser.rs  current_time.rs  geocode.rs  memory.rs  message.rs  schedule.rs  telegram.rs  weather.rs  web.rs
crates/pluribus-unum/src/tools/browser/: click.rs  close.rs  content.rs  evaluate.rs  navigate.rs  type_text.rs
crates/pluribus-unum/src/tools/memory/: forget.rs  remember.rs
crates/pluribus-unum/src/tools/message/: telegram.rs
crates/pluribus-unum/src/tools/schedule/: delete.rs  list.rs  set.rs
crates/pluribus-unum/src/tools/telegram/: complete_pairing.rs  generate_pairing_code.rs  set_token.rs  status.rs
crates/pluribus-unum/src/tools/weather/: met.rs
crates/pluribus-unum/src/tools/web/: fetch.rs  search.rs
crates/pluribus-unum/src/tools/web/search/: ddg.rs  exa.rs
crates/pluribus-unum/src/tools/web/search/exa/: search.rs
etc/s6-overlay/s6-rc.d/tailscale/: up
etc/s6-overlay/s6-rc.d/tailscaled/: run
etc/s6-overlay/s6-rc.d/unum/: run
