[workspace]
resolver = "2"
members = [
  "crates/pluribus-frequency",
  "crates/pluribus-unum",
]

[workspace.dependencies]
pluribus-chat = { path = "./crates/pluribus-chat" }
pluribus-frequency = { path = "./crates/pluribus-frequency" }

serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
schemars = "1"
rmp-serde = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
dirs = "6"
exn = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
loro = "1.10"
async-broadcast = "0.7"
async-channel = "2"
async-lock = "3"
async-task = "4"
async-executor = "1"
async-io = "2"
async-net = "2"
async-process = "2"
futures-lite = "2"
futures-sink = "0.3"
blocking = "1"
smol-macros = "0.1"
macro_rules_attribute = "0.2"
async-tungstenite = "0.28"
croner = "3"
isahc = { version = "1", features = ["json"] }
dom_smoothie = "0.15"
pulldown-cmark = { version = "0.12", default-features = false }
is-terminal = "0.4"
serial_test = "3"
ulid = { version = "1", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# too noisy
missing_errors_doc = "allow"
multiple_crate_versions = "allow"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
