[package]
name = "pluribus-llm"
version = "0.0.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
pluribus-frequency = { workspace = true }

chrono = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
exn = { workspace = true }
isahc = { workspace = true }
futures-lite = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
